[project]
name = "randomized-smoothing"
version = "0.1.0"
description = "Randomized smoothing certification experiments"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "hydra-core",
    "hydra-submitit-launcher",
    "omegaconf",
    "comet-ml",
    "transformers",
    "timm",
    "onnx",
    "onnxruntime-gpu",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared", "ds_cifar10", "ds_imagenet"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "F",
    "UP",
    "B",
    "SIM",
    "I",
]

